# open-service-broker

./: .env.example  .gitignore  Dockerfile  README.md  dlq_runbook.md  docker-compose.yml  model.py  opa_design.md  pyproject.toml  runbook.md  start_local_stack.py
.github/workflows/: cd.yml  ci.yml  maintenance.yml
opa/: policy.rego
scripts/: chaos_test.py
src/broker/: __init__.py  config.py  dependencies.py  main.py  maintain.py  mock_sovereign.py  worker.py
src/broker/cli/: __init__.py  api_client.py  app.py  config.py  display.py
src/broker/middleware/: __init__.py  api_key.py  error_handler.py  logging.py  request_id.py
src/broker/routers/: catalog.py  events.py  health.py  intent.py  maintenance.py  resources.py  scaling.py
src/broker/schemas/: __init__.py  intent.py  maintenance.py  metrics.py  resource.py  sovereign.py  task.py
src/broker/services/: auto_retry_agent.py  auto_scaler.py  cloudwatch_exporter.py  code_analyzer.py  dynamodb.py  event_bus.py  github_integration.py  intent_parser.py  llm_gateway.py  maintenance_runner.py  metrics_collector.py  opa_client.py  prediction_engine.py  refactoring_agent.py  safety.py  sovereign_client.py  sqs.py  sync_service.py
src/broker/templates/: cluster_envoy.yaml.j2  ratelimit_envoy.yaml.j2  route_envoy.yaml.j2
terraform/: dynamodb.tf  ecs.tf  main.tf  sqs.tf
tests/: conftest.py  test_auto_retry.py  test_cache.py  test_catalog.py  test_cli.py  test_compliance.py  test_dynamodb.py  test_events.py  test_gemini_gateway.py  test_integration_dynamodb.py  test_integration_sqs.py  test_integration_worker.py  test_intent_parser.py  test_maintenance_runner.py  test_prediction.py  test_production_readiness.py  test_red_team.py  test_safety.py  test_sqs.py  test_sync.py  test_worker.py
