[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-service-broker"
version = "0.1.0"
description = "Advanced AI Service Broker — AI-driven intent parsing, predictive scaling, and event-driven provisioning"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Service Broker Team" }]

dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "sse-starlette>=2.2.0",
    "websockets>=14.0",

    # AWS
    "aioboto3>=13.0.0",
    "boto3>=1.35.0",
    "types-aiobotocore[dynamodb,sqs]>=2.15.0",

    # AI / LLM
    "openai>=1.60.0",
    "tiktoken>=0.8.0",
    "google-generativeai>=0.8.0",

    # ML / Prediction
    "scikit-learn>=1.6.0",
    "prophet>=1.1.6",
    "numpy>=2.1.0",
    "pandas>=2.2.0",

    # Utilities
    "structlog>=24.4.0",
    "python-ulid>=3.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.0.0",
    "types-boto3",
    "flask",
    "moto[server,dynamodb,sqs]>=5.0.0",
]
cli = [
    "typer>=0.12.0",
    "rich>=13.0",
    "httpx-sse>=0.4.0",
]
ci = [
    "PyGithub>=2.0",
]

[project.scripts]
broker-api = "broker.main:run"
broker-worker = "broker.worker:run"
osb = "broker.cli.app:main"
broker-maintain = "broker.maintain:main"

[tool.hatch.build.targets.wheel]
packages = ["src/broker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests requiring LocalStack or real AWS (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["broker"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "aioboto3.*",
    "prophet.*",
    "sklearn.*",
    "redis.*",
    "google.generativeai.*",
]
ignore_missing_imports = true
